유레카 서비스 등록

--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,maven,windows,visualstudiocode,macos,eclipse,gradle
+**/.idea
