--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -6,6 +6,14 @@ spring:
     name: gateway-service #고유 ID
   cloud:
     gateway:
+      #global filter 적용
+      default-filters:
+        - name : GlobalFilter
+          args:
+            baseMessage: Spring Cloud Gateway Global Filter
+            preLogger: true
+            postLogger: true
+      #routing 정보
       routes:
         - id: first-service
           uri: http://localhost:8081
@@ -23,6 +31,7 @@ spring:
 #            - AddRequestHeader=second-request, second-request-header2
 #            - AddResponseHeader=second-response, second-response-header2
             - CustomFilter
+
 
 eureka:
   client:
