유레카에 등록

--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: discovery-service #?? ID
+    name: discovery-service #고유 ID
 
 #??? ??? ???? ???? ??? ?????
 #???? ????? ???? ??
