--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,6 +5,20 @@ server:
 spring:
   application:
     name: user-service #고유 ID
+  # db 사용 설정
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+  #jpa 설정 <- h2 버전 안바꿔도 자동 db 생성함
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console # http://localhost:9001/h2-console/ 로 접속
 
 eureka:
 #  instance:
@@ -14,3 +28,9 @@ eureka:
     fetch-registry: true # 서버로부터 인스턴스들의 정보를 주기적으로 가져오겠다
     service-url: #서버의 위치 지정
       defaultZone: http://127.0.0.1:8761/eureka #유레카 엔드포인트에 마이크로서비스 정보 등록
+
+# welcome message 작성
+# Environment 객체 이용해서 사용
+# 또는 @Value 어노테이션 이용해서 사용
+greeting:
+  message: Welcome to the Simple E-Commerce.
