gateway에 userService 등록

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -36,6 +36,10 @@ spring:
                 baseMessage: Apply Custom Logging Filter!
                 preLogger: true
                 postLogger: true
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/**
 
 eureka:
   client:
