gateway에서 JWT 확인 후 서비스로 라우팅

--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -26,7 +26,17 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-
+		<!-- jwt 사용을 위한 dependency 추가 -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<!-- java.lang.NoClassDefFoundError: javax/xml/bind/DatatypeConverter 해결을 위해 추가 -->
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
