config server 가동

--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -9,4 +9,5 @@ spring:
     config:
       server:
         git:
-          uri: file://d:/Coding Practice/SpringCloudMSA
+#          uri: file://d:/Coding Practice/SpringCloudMSA
+          uri: https://github.com/beeguriri/SpringCloudMSA
