--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: gateway-service #고유 ID
+  #rabbitmq 설정
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   config:
     import: optional:configserver:http://127.0.0.1:8888
   cloud:
@@ -107,4 +113,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans, httptrace
+        include: refresh, health, beans, httptrace, busrefresh
