--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,6 +5,12 @@ server:
 spring:
   application:
     name: user-service #고유 ID
+  #rabbitmq 설정
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   # db 사용 설정
   datasource:
     url: jdbc:h2:mem:testdb
@@ -26,7 +32,6 @@ spring:
   config:
     import: optional:configserver:http://127.0.0.1:8888
 
-
 eureka:
 #  instance:
 #    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
@@ -46,3 +51,8 @@ greeting:
 #token:
 #  expriration_time: 86400000 #유효기간 1일 (ms)
 #  secret: user_token
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh
