refresh 하면 서버 재구동 되지만 파일 못불러 오는 문제 해결! >> bootstrap.yml 별도로 작성 해 줌

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -12,10 +12,12 @@ spring:
     password: guest
 #  config:
 #    import: optional:configserver:http://127.0.0.1:8888
+  config:
+    import:
+      - classpath:/bootstrap.yml
   cloud:
-    config:
-      uri: http://127.0.0.1:8888
-      name: ecommerce
+#      uri: http://127.0.0.1:8888
+#      name: ecommerce
     gateway:
       #global filter 적용
       default-filters:
