- 비대칭키로 config 설정정보 암호화 하기

--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -1,2 +1,6 @@
 encrypt:
-  key: hello1234spring
+#  key: hello1234spring
+  key-store:
+    location: file:///${user.home}\Documents\keystore\apiEncryptionKey.jks
+    password: test1234
+    alias: apiEncryptionKey
