feignclient 폴더구조 변경, 예외처리 추가, 에러디버깅레벨 추가

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -60,3 +60,8 @@ management:
     web:
       exposure:
         include: refresh, health, beans, busrefresh
+
+#로깅레벨 추가
+logging:
+  level:
+    wendy.study.userservice.client: DEBUG
