--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>2.7.11</version>
         </dependency>
+        <!-- kafka 사용을 위한 dependency 추가 -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
