--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   #jpa 설정 <- h2 버전 안바꿔도 자동 db 생성함
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     generate-ddl: true
     # 하이버네이트 초기화 이후 작동할 수 있도록 설정
