여러 인스턴스가 있을때 데이터 동기화 문제 해결하기 위하여 kafka connector 사용

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -5,9 +5,14 @@ spring:
   application:
     name: order-service #고유 ID
   # db 사용 설정
+  # maria db 사용
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+    url: jdbc:mariadb://localhost:3306/mydb
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: test1357
   #jpa 설정 <- h2 버전 안바꿔도 자동 db 생성함
   jpa:
     hibernate:
