--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 server:
-  port: 8761  #?????? ???? ???? ??
+  port: 8761
 
 spring:
   application:
     name: discovery-service #고유 ID
-
-#??? ??? ???? ???? ??? ?????
-#???? ????? ???? ??
+  cloud:
+    config:
+      uri: http://127.0.0.1:8888
+      name: ecommerce
 eureka:
   client:
     register-with-eureka: false
